<resources>
    <string name="app_name">Pusat Khidmat Adun Indera Kayangan</string>
    <string name="hint_comment">Please write your comments here</string>
    <string name="btn_submit">Submit</string>
    <string name="image_view_hint">Upload your image here</string>
    <string name="text_positive">Positive comment</string>
    <string name="text_negative">Negative comment</string>
    <string name="text_view_more">View more</string>
    <string name="text_my_post">My Posts</string>
    <string name="text_add_post">Add Posts</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings    related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="text_register">Register</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_ic">IC (e.g. 1111–11–1111)</string>
    <string name="text_password">Password (More than 8 char)</string>
    <string name="text_confirm_pwd">Confrim Password (More than 8 char)</string>
    <string name="text_password2">Password</string>
    <string name="text_login">Login</string>
    <string name="text_register_now">Register Here!</string>
    <string name="text_logout">Logout</string>
    <string name="text_posts">Posts</string>
    <string name="text_surveys">Surveys</string>

    <string name="text_copyright">Developed by : Legaxus Software\ncontact@legaxus.com</string>
    <string name="text_keep_me_logged_in">Keep me logged in</string>
    <string name="details">Detailes of Survey</string>

    <!--Fonts -->
    <string name="sanfranciso_regular">SanFranciscoDisplay-Regular.ttf</string>
    <string name="sanfranciso_Bold">SanFranciscoDisplay-Bold.ttf</string>
    <string name="sanfranciso_Medium">SanFranciscoDisplay-Medium.ttf</string>
    <string name="sanfranciso_Black">SanFranciscoDisplay-Black.ttf</string>
</resources>
