<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">


    <com.legaxus.pkaik.CustomTextView
        android:id="@+id/txt_edittext_lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:fontName="@string/sanfranciso_Bold" />

    <com.legaxus.pkaik.CustomEditTextView
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text=""
        android:textColor="@android:color/black"
        android:backgroundTint="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/font_14"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:fontName="@string/sanfranciso_Medium" />


</LinearLayout>